change text html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <div>Hello Team</div>
+    <div>Hello Team using VS code to commit</div>
 </body>
 </html>
