--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div>Hello Team using VS code to commit</div>
+    <div>Hello Team using VS code to commit to check difference</div>
+    <h1>Yuppy yay</h1>
 </body>
 </html>
