--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <div>Hello Team using VS code to commit to check difference</div>
     <h1>Yuppy yay</h1>
+    <div>bla</div>
 </body>
 </html>
